# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

bindings_gen_dir = "$root_gen_dir/evita/dom/bindings"

interface_idl_files = [
  "//evita/dom/components/clipboard/DataTransfer.idl",
  "//evita/dom/components/clipboard/DataTransferItem.idl",
  "//evita/dom/components/clipboard/DataTransferItemList.idl",
  "//evita/dom/components/imaging/ImageData.idl",
  "//evita/dom/components/win_registry/WinRegistry.idl",
  "//evita/dom/components/win_resource/WinResource.idl",
  "//evita/dom/Editor.idl",
  "//evita/dom/FilePath.idl",
  "//evita/dom/ScriptModule.idl",
  "//evita/dom/encodings/TextDecoder.idl",
  "//evita/dom/encodings/TextEncoder.idl",
  "//evita/dom/events/CompositionEvent.idl",
  "//evita/dom/events/CompositionSpan.idl",
  "//evita/dom/events/TextDocumentEvent.idl",
  "//evita/dom/events/Event.idl",
  "//evita/dom/events/EventTarget.idl",
  "//evita/dom/events/FocusEvent.idl",
  "//evita/dom/events/FormEvent.idl",
  "//evita/dom/events/KeyboardEvent.idl",
  "//evita/dom/events/MouseEvent.idl",
  "//evita/dom/events/UiEvent.idl",
  "//evita/dom/events/ViewEventTarget.idl",
  "//evita/dom/events/WheelEvent.idl",
  "//evita/dom/events/WindowEvent.idl",
  "//evita/dom/forms/ButtonControl.idl",
  "//evita/dom/forms/CheckboxControl.idl",
  "//evita/dom/forms/Form.idl",
  "//evita/dom/forms/FormControl.idl",
  "//evita/dom/forms/LabelControl.idl",
  "//evita/dom/forms/RadioButtonControl.idl",
  "//evita/dom/forms/TextFieldControl.idl",
  "//evita/dom/forms/TextFieldSelection.idl",

  # TODO(eval1749): We should use "Runnable.idl" instead of "types_externs.js".
  #"//evita/dom/jslib/Runnable.idl",
  "//evita/dom/jslib/TaskScheduler.idl",

  # namespace Os
  "//evita/dom/os/AbstractFile.idl",
  "//evita/dom/os/Directory.idl",
  "//evita/dom/os/File.idl",
  "//evita/dom/os/Process.idl",

  "//evita/dom/text/TextDocument.idl",
  "//evita/dom/text/TextDocumentSetObserver.idl",
  "//evita/dom/text/LineAndColumn.idl",
  "//evita/dom/text/TextMutationObserver.idl",
  "//evita/dom/text/TextMutationRecord.idl",
  "//evita/dom/text/TextRange.idl",
  "//evita/dom/text/RegularExpression.idl",

  # TODO(eval1749): binding generator and js extern generator should support
  # typedef only file.
  #"//evita/dom/timing/DOMHighResTimeStamp.idl",
  "//evita/dom/timing/IdleDeadline.idl",
  "//evita/dom/timing/Performance.idl",
  "//evita/dom/timers/OneShotTimer.idl",
  "//evita/dom/timers/RepeatingTimer.idl",
  "//evita/dom/timers/Timer.idl",

  #"//evita/dom/visuals/Document.idl",
  #"//evita/dom/visuals/Element.idl",
  #"//evita/dom/visuals/Node.idl",
  #"//evita/dom/visuals/Text.idl",
  "//evita/dom/css/CSSStyleSheetHandle.idl",
  "//evita/dom/visuals/NodeHandle.idl",
  "//evita/dom/windows/EditorWindow.idl",
  "//evita/dom/windows/FormWindow.idl",

  # Note: We have "Point.idl" and "Rect.idl" here for JS externs
  "//evita/dom/windows/Point.idl",
  "//evita/dom/windows/Rect.idl",
  "//evita/dom/windows/TextSelection.idl",
  "//evita/dom/windows/TextWindow.idl",
  "//evita/dom/windows/VisualWindow.idl",
  "//evita/dom/windows/Window.idl",
]

dictionary_idl_files = [
  "//evita/dom/encodings/TextDecodeOptions.idl",
  "//evita/dom/encodings/TextDecoderOptions.idl",
  "//evita/dom/encodings/TextEncodeOptions.idl",
  "//evita/dom/events/CompositionEventInit.idl",
  "//evita/dom/events/TextDocumentEventInit.idl",
  "//evita/dom/events/EventInit.idl",
  "//evita/dom/events/FocusEventInit.idl",
  "//evita/dom/events/FormEventInit.idl",
  "//evita/dom/events/KeyboardEventInit.idl",
  "//evita/dom/events/MouseEventInit.idl",
  "//evita/dom/events/UiEventInit.idl",
  "//evita/dom/events/WheelEventInit.idl",
  "//evita/dom/events/WindowEventInit.idl",
  "//evita/dom/os/MoveFileOptions.idl",
  "//evita/dom/text/TextMutationObserverInit.idl",
  "//evita/dom/text/RegExpInit.idl",
  "//evita/dom/timing/IdleRequestOptions.idl",
  "//evita/dom/windows/FormWindowInit.idl",
]
