# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

js_defs_files = [
  "enums.js",
  "events/event_enums.js",
  "strings_en_US.js",
  "unicode_enums.js",
  "windows/window_enums.js",
]

js_lib_files = [
  "polyfill.js",
  "initialize.js",
  "key_names.js",

  "base/define.js",
  "base/async.js",
  "base/base64.js",
  "base/logging.js",
  "base/ordered_set.js",
  "base/singleton.js",
  "base/strings/string_util.js",

  "text/simple_mutation_observer.js",
  "lexers/lexer.js",

  "bracket.js",
  "bindings/platform_error.js",
  "css/text_style.js",
  "text/simple_text_document_set_observer.js",
  "text/text_document.js",
  "text/text_document_file_io.js",
  "text/text_document_file_load.js",
  "text/text_document_file_save.js",
  "text/text_document_template.js",
  "editor.js",
  "windows/editor_window.js",
  "encodings/text_decoder.js",
  "encodings/text_encoder.js",
  "errors.js",
  "file_path.js",

  "forms/button_control.js",
  "forms/checkbox_control.js",
  "forms/form.js",
  "forms/form_control.js",
  "forms/form_window.js",
  "forms/label_control.js",
  "forms/radio_button_control.js",
  "forms/text_field_control.js",
  "forms/text_field_selection.js",

  "jslib/editors.js",
  "jslib/task_scheduler.js",
  "jslib/windows.js",

  #"lexers/cmd_lexer.js",
  "lexers/clike_lexer.js",
  "lexers/cpp_lexer.js",
  "lexers/csharp_lexer.js",
  "lexers/gn_lexer.js",
  "lexers/idl_lexer.js",
  "lexers/java_lexer.js",
  "lexers/javascript_lexer.js",
  "lexers/config_lexer.js",
  "lexers/python_lexer.js",
  "lexers/xml_lexer.js",
  "lexers/html_lexer.js",

  "text/modes/mode.js",
  "text/modes/modes.js",
  "os/file.js",
  "os/os.js",
  "os/process.js",
  "text/text_range.js",
  "text/regular_expression.js",
  "text/text_position.js",
  "timers/timer.js",
  "trace_logger.js",

  "visuals/node.js",
  "$root_gen_dir/evita/dom/visuals/css_style_declaration.js",
  "visuals/css_rule.js",
  "visuals/css_style_rule.js",
  "visuals/css_style_sheet.js",
  "visuals/document.js",
  "visuals/dom_token_list.js",
  "visuals/element.js",
  "visuals/image.js",
  "visuals/shape.js",
  "visuals/text.js",

  "visuals/css_rule_builder.js",

  "windows/text_document_state.js",
  "windows/point.js",
  "windows/rect.js",
  "windows/tab_data.js",
  "windows/text_selection.js",
  "windows/text_window.js",
  "windows/visual_window.js",
  "windows/window.js",

  "components/commander/commander.js",
  "components/dynamic_abbrev/dynamic_abbrev.js",
  "components/find_and_replace/find_and_replace.js",
  "components/find_and_replace/find_and_replace_commands.js",

  "components/highlights/highlights.js",
  "$root_gen_dir/evita/dom/components/highlights/config_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/cpp_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/csharp_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/gn_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/html_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/idl_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/javascript_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/python_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/xmltag_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/xml_tokens.js",
  "components/highlights/config_highlighter.js",
  "components/highlights/cpp_highlighter.js",
  "components/highlights/csharp_highlighter.js",
  "components/highlights/gn_highlighter.js",
  "components/highlights/idl_highlighter.js",
  "components/highlights/javascript_highlighter.js",
  "components/highlights/python_highlighter.js",
  "components/highlights/xml_highlighter.js",
  "components/highlights/html_highlighter.js",

  "components/imaging/icon_util_win.js",
  "components/launchpad/launchpad.js",
  "components/logging/logging_document.js",
  "components/spell_checker/spell_checker.js",
  "components/win_resource/win_resource.js",

  "components/repl/console.js",
  "components/repl/describe.js",
  "components/repl/js_console.js",
  "components/repl/load.js",
  "components/repl/stringify.js",

  "components/repl/js_completer.js",
  "components/repl/js_console_commands.js",

  "windows/text_window_commands.js",
  "windows/window_commands.js",

  "jslib/install_stringify.js",

  "testing/test.js",
]
