# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

js_defs_files = [
  "enums.js",
  "events/event_enums.js",
  "strings_en_US.js",
  "unicode_enums.js",
  "windows/window_enums.js",
]

js_lib_files = [
  "polyfill.js",
  "initializer.js",
  "key_names.js",

  "base/base.js",
  "base/define.js",
  "base/async.js",
  "base/base64.js",
  "base/logger.js",
  "base/logging.js",
  "base/ordered_set.js",
  "base/singleton.js",
  "base/strings/string_util.js",

  "text/simple_mutation_observer.js",

  "bracket.js",
  "bindings/platform_error.js",
  "css/text_style.js",
  "text/simple_text_document_set_observer.js",
  "text/text_document.js",
  "text/text_document_file_io.js",
  "text/text_document_file_load.js",
  "text/text_document_file_save.js",
  "text/text_document_template.js",
  "editor.js",
  "windows/editor_window.js",
  "encodings/text_decoder.js",
  "encodings/text_encoder.js",
  "errors.js",
  "file_path.js",

  "forms/button_control.js",
  "forms/checkbox_control.js",
  "forms/form.js",
  "forms/form_control.js",
  "forms/form_window.js",
  "forms/label_control.js",
  "forms/radio_button_control.js",
  "forms/text_field_control.js",
  "forms/text_field_selection.js",

  "jslib/editors.js",
  "jslib/task_scheduler.js",
  "jslib/windows.js",

  "os/file.js",
  "os/os.js",
  "os/process.js",
  "text/text_range.js",
  "text/regular_expression.js",
  "text/text_position.js",
  "timers/timer.js",
  "trace_logger.js",

  "visuals/node.js",
  "$root_gen_dir/evita/dom/visuals/css_style_declaration.js",
  "visuals/css_rule.js",
  "visuals/css_style_rule.js",
  "visuals/css_style_sheet.js",
  "visuals/document.js",
  "visuals/dom_token_list.js",
  "visuals/element.js",
  "visuals/image.js",
  "visuals/shape.js",
  "visuals/text.js",

  "visuals/css_rule_builder.js",

  "windows/text_document_state.js",
  "windows/point.js",
  "windows/rect.js",
  "windows/tab_data.js",
  "windows/text_selection.js",
  "windows/text_window.js",
  "windows/visual_window.js",
  "windows/window.js",

  "components/commander/commander.js",
  "components/dynamic_abbrev/dynamic_abbrev.js",
  "components/find_and_replace/find_and_replace.js",
  "components/find_and_replace/find_and_replace_commands.js",

  "components/highlights/highlights.js",
  "components/highlights/painter.js",
  "components/highlights/tokenizer.js",
  "components/highlights/highlight_engine.js",

  "$root_gen_dir/evita/dom/components/highlights/xmltag_tokens.js",
  "components/highlights/tag_painter.js",

  "$root_gen_dir/evita/dom/components/highlights/cmd_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/config_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/cpp_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/csharp_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/css_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/gn_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/html_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/idl_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/javascript_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/java_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/plain_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/python_tokens.js",
  "$root_gen_dir/evita/dom/components/highlights/xml_tokens.js",

  "components/highlights/langs/cmd_painter.js",
  "components/highlights/langs/config_painter.js",
  "components/highlights/langs/cpp_painter.js",
  "components/highlights/langs/csharp_painter.js",
  "components/highlights/langs/css_painter.js",
  "components/highlights/langs/gn_painter.js",
  "components/highlights/langs/idl_painter.js",
  "components/highlights/langs/javascript_painter.js",
  "components/highlights/langs/java_painter.js",
  "components/highlights/langs/plain_painter.js",
  "components/highlights/langs/python_painter.js",
  "components/highlights/langs/xml_painter.js",
  "components/highlights/langs/html_painter.js",

  "components/imaging/icon_util_win.js",
  "components/launchpad/launchpad.js",
  "components/modes/mode.js",
  "components/modes/modes.js",
  "components/logging/logging_document.js",
  "components/spell_checker/spell_checker.js",
  "components/win_resource/win_resource.js",

  "components/repl/repl.js",
  "components/repl/console.js",
  "components/repl/describe.js",
  "components/repl/js_console.js",
  "components/repl/load.js",
  "components/repl/stringify.js",

  "components/repl/js_completer.js",
  "components/repl/js_console_commands.js",

  "windows/text_window_commands.js",
  "windows/window_commands.js",

  "jslib/install_stringify.js",

  "testing/test.js",
]
