# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

js_lib_files = [
  "polyfill.js",
  "initializer.js",
  "key_names.js",

  "base/base.js",
  "base/async.js",
  "base/base64.js",
  "base/logger.js",
  "base/logging.js",
  "base/ordered_set.js",
  "base/singleton.js",
  "base/strings/string_util.js",

  "text/simple_mutation_observer.js",

  "bracket.js",
  "bindings/platform_error.js",
  "text/find_bracket.js",
  "text/simple_text_document_set_observer.js",
  "text/text_document.js",
  "text/text_document_file_io.js",
  "text/text_document_file_load.js",
  "text/text_document_file_save.js",
  "editor.js",
  "windows/editor_window.js",
  "encodings/text_decoder.js",
  "encodings/text_encoder.js",
  "errors.js",
  "file_path.js",

  "forms/button_control.js",
  "forms/checkbox_control.js",
  "forms/form.js",
  "forms/form_control.js",
  "forms/form_window.js",
  "forms/label_control.js",
  "forms/radio_button_control.js",
  "forms/text_field_control.js",
  "forms/text_field_selection.js",

  "jslib/editors.js",
  "jslib/task_scheduler.js",
  "jslib/windows.js",

  "os/file.js",
  "os/os.js",
  "os/process.js",
  "text/text_range.js",
  "text/regular_expression.js",
  "timers/timer.js",
  "trace_logger.js",
  "unicode/unicode.js",

  "css/css.js",
  "css/parser/css_token.js",
  "css/parser/css_tokenizer.js",
  "$root_gen_dir/evita/dom/css/css_property.js",
  "$root_gen_dir/evita/dom/css/css_value.js",
  "$root_gen_dir/evita/dom/css/css_style_declaration.js",
  "css/css_rule.js",
  "css/css_style_rule.js",
  "css/css_style_sheet.js",
  "css/css_rule_builder.js",

  "visuals/visuals.js",
  "visuals/node.js",
  "visuals/dom_token_list.js",
  "visuals/element.js",
  "visuals/image.js",
  "visuals/shape.js",
  "visuals/text.js",
  "visuals/document.js",

  "windows/text_document_state.js",
  "windows/point.js",
  "windows/rect.js",
  "windows/tab_data.js",
  "windows/text_selection.js",
  "windows/text_window.js",
  "windows/visual_window.js",
  "windows/window.js",

  "components/imaging/icon_util_win.js",

  "components/win_resource/win_resource.js",

  "components/repl/repl.js",
  "components/repl/console.js",
  "components/repl/describe.js",
  "components/repl/js_console.js",
  "components/repl/load.js",
  "components/repl/stringify.js",

  "components/repl/js_completer.js",
  "components/repl/js_console_commands.js",

  "jslib/install_stringify.js",

  "testing/test.js",

  # Commander provides keyboard binding.
  "global/commander.js",
]
