# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("frames") {
  sources = [
    "edit_pane.cc",
    "edit_pane.h",
    "frame.cc",
    "frame.h",
    "frame_list.cc",
    "frame_list.h",
    "frame_observer.cc",
    "frame_observer.h",
    "title_bar.cc",
    "title_bar.h",
  ]

  deps = [
    "//base",
    "//evita/views",
  ]
}
