# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("gfx") {
  sources = [
    "bitmap.cc",
    "brush.cc",
    "brush.h",
    "canvas.cc",
    "canvas_observer.cc",
    "canvas_observer.h",
    "canvas_owner.cc",
    "canvas_owner.h",
    "color_f.cc",
    "dpi_handler.cc",
    "dpi_handler.h",
    "dx_device.cc",
    "dx_device.h",
    "font.cc",
    "font.h",
    "font_face.cc",
    "font_face.h",
    "point_f.cc",
    "rect_conversions.cc",
    "rect_conversions.h",
    "rect_f.cc",
    "simple_object.cc",
    "simple_object.h",
    "size_f.cc",
    "stroke_style.cc",
    "swap_chain.cc",
    "swap_chain.h",
    "text_format.cc",
    "text_layout.cc",
  ]

  if (is_win) {
    sources += [
      "direct2d_factory_win.cc",
      "direct2d_factory_win.h",
      "direct_write_factory_win.cc",
      "direct_write_factory_win.h",
      "imaging_factory_win.cc",
      "imaging_factory_win.h",
    ]
  }

  deps = [
    "//base",
    "//common",
  ]
}
