# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("ginx") {
  sources = [
    "array_buffer_view.cc",
    "array_buffer_view.h",
    "constructor_template.cc",
    "constructor_template.h",
    "context_holder.h",
    "converter.cc",
    "converter.h",
    "either.h",
    "function_template.h",
    "function_template_builder.cc",
    "function_template_builder.h",
    "gin_embedders.h",
    "ginx.h",
    "ginx_util.cc",
    "ginx_util.h",
    "isolate_holder.cc",
    "isolate_holder.h",
    "nullable.h",
    "object_template_builder.h",
    "optional.h",
    "per_isolate_data.cc",
    "per_isolate_data.h",
    "runner.cc",
    "runner.h",
    "runner_delegate.cc",
    "runner_delegate.h",
    "scoped_persistent.h",
    "scriptable.cc",
    "scriptable.h",
    "v8.h",
    "v8_platform.cc",
    "v8_platform.h",
    "wrapper_info.cc",
    "wrapper_info.h",
  ]

  public_deps = [
    "//gin",
    "//v8",
  ]
}

test("tests") {
  output_name = "evita_ginx_tests"
  sources = [
    "runner_test.cc",
  ]
  deps = [
    ":ginx",
    "//base/test:run_all_unittests",
    "//evita/gc",
    "//testing/gtest",
  ]
}
