# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("io") {
  sources = [
    "block_io_context.cc",
    "block_io_context.h",
    "directory_io_context.cc",
    "directory_io_context.h",
    "file_io_context.cc",
    "file_io_context.h",
    "io_context.cc",
    "io_context.h",
    "io_context_utils.cc",
    "io_context_utils.h",
    "io_delegate_impl.cc",
    "io_delegate_impl.h",
    "io_manager.cc",
    "io_manager.h",
    "io_thread_proxy.cc",
    "io_thread_proxy.h",
    "process_io_context.cc",
    "process_io_context.h",
  ]

  public_deps = [
    "//base",
    "//evita/dom",
  ]
}
