# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("layout") {
  sources = [
    "layout_view.cc",
    "layout_view.h",
    "layout_view_builder.cc",
    "layout_view_builder.h",
    "line/inline_box.cc",
    "line/inline_box.h",
    "line/inline_box_forward.h",
    "line/inline_box_visitor.cc",
    "line/inline_box_visitor.h",
    "line/line_builder.cc",
    "line/line_builder.h",
    "line/root_inline_box.cc",
    "line/root_inline_box.h",
    "line/root_inline_box_cache.cc",
    "line/root_inline_box_cache.h",
    "render_font.cc",
    "render_font.h",
    "render_font_set.cc",
    "render_font_set.h",
    "render_selection.cc",
    "render_selection.h",
    "render_style.cc",
    "render_style.h",
    "layout_block_flow.cc",
    "layout_block_flow.h",
    "text_formatter.cc",
    "text_formatter.h",
    "text_view.cc",
    "text_view.h",
  ]

  public_deps = [
    "//base",
    "//evita/css",
    "//evita/gfx",
    "//evita/text",
    "//evita/ui",
  ]
}
