# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("layout") {
  sources = [
    "block_flow.cc",
    "block_flow.h",
    "paint_view_builder.cc",
    "paint_view_builder.h",
    "render_font_set.cc",
    "render_font_set.h",
    "render_selection.cc",
    "render_selection.h",
    "render_style.cc",
    "render_style.h",
    "text_formatter.cc",
    "text_formatter.h",
    "text_view.cc",
    "text_view.h",
  ]

  public_deps = [
    "//base",
    "//evita/css",
    "//evita/gfx",
    "//evita/layout/line",
    "//evita/paint/public",
    "//evita/text",
  ]
}

test("evita_layout_tests") {
  sources = [
    "block_flow_test.cc",
    "text_formatter_test.cc",
  ]

  deps = [
    ":layout",
    "//base/test:run_all_unittests",
    # TODO(eval1749): We should make layout independent from
    # "//evita/application".
    "//evita:application",
    "//evita/layout/line:tests",
  ]
}
