# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("metrics") {
  sources = [
    "counter.cc",
    "counter.h",
    "sampling.cc",
    "sampling.h",
    "time_scope.cc",
    "time_scope.h",
  ]

  public_deps = [
    "//base",
  ]
}
