# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("paint") {
  sources = [
    "inline_box_painter.cc",
    "inline_box_painter.h",
    "layout_view_painter.cc",
    "layout_view_painter.h",
    "paint_thread.cc",
    "paint_thread.h",
    "root_inline_box_painter.cc",
    "root_inline_box_painter.h",
  ]

  public_deps = [
    "//evita/gfx",
  ]
}
