# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("paint") {
  sources = [
    "inline_box_painter.cc",
    "inline_box_painter.h",
    "paint_thread.cc",
    "paint_thread.h",
    "paint_thread_canvas_owner.cc",
    "paint_thread_canvas_owner.h",
    "root_inline_box_painter.cc",
    "root_inline_box_painter.h",
    "root_inline_box_list_painter.cc",
    "root_inline_box_list_painter.h",
    "selection.cc",
    "selection.h",
    "view_painter.cc",
    "view_painter.h",
    "view_paint_cache.cc",
    "view_paint_cache.h",
  ]

  public_deps = [
    "//evita/gfx",
    "//evita/layout",
  ]
}
