# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/win/manifest.gni")

windows_manifest("evita_exe_manifest") {
  sources = [
    "dpi_aware.manifest",
    as_invoker_manifest,
    common_controls_manifest,
    default_compatibility_manifest,
  ]
  type = "exe"
}
