# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

group("text") {
  deps = [
    "models",
  ]
}

test("evita_text_tests") {
  deps = [
    ":text",
    "//base/test:run_all_unittests",
    "//evita/text/encodings:tests",
    "//evita/text/models:tests",
    "//evita/text/style/models:tests",
  ]
}
