# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ui") {
  sources = [
    "base/selection_model.cc",
    "base/selection_model.h",
    "base/selection_state.h",
    "base/table_model.cc",
    "base/table_model_observer.cc",
    "caret.cc",
    "caret.h",
    "caret_owner.cc",
    "caret_owner.h",
    "controls/arrow_button.cc",
    "controls/arrow_button.h",
    "controls/button.cc",
    "controls/button.h",
    "controls/button_control.cc",
    "controls/checkbox_control.cc",
    "controls/control.cc",
    "controls/control_controller.cc",
    "controls/label_control.cc",
    "controls/radio_button_control.cc",
    "controls/scroll_bar.cc",
    "controls/scroll_bar_observer.cc",
    "controls/status_bar.cc",
    "controls/table_control.cc",
    "controls/table_control_observer.cc",
    "controls/text_field_control.cc",
    "tooltip.cc",
    "tooltip.h",
  ]

  deps = [
    ":widget"
  ]
}

source_set("widget") {
  sources = [
    "base/ime/text_composition.cc",
    "base/ime/text_composition.h",
    "base/ime/text_input_client.cc",
    "base/ime/text_input_client.h",
    "base/ime/text_input_client_win.cc",
    "base/ime/text_input_client_win.h",
    "base/ime/text_input_delegate.cc",
    "base/ime/text_input_delegate.h",
    "animation/animatable.cc",
    "animation/animatable.h",
    "animation/animatable_window.cc",
    "animation/animatable_window.h",
    "animation/animatables.cc",
    "animation/animatables.h",
    "animation/animation_frame_handler.cc",
    "animation/animation_frame_handler.h",
    "animation/animation_group.cc",
    "animation/animation_group.h",
    "animation/animation_group_member.cc",
    "animation/animation_group_member.h",
    "animation/animation_observer.cc",
    "animation/animation_observer.h",
    "animation/animation_scheduler.cc",
    "animation/animation_scheduler.h",
    "animation/animation_value.cc",
    "animation/animation_value.h",
    "animation/animator.cc",
    "animation/animator.h",
    "compositor/compositor.cc",
    "compositor/compositor.h",
    "compositor/layer.cc",
    "compositor/layer.h",
    "compositor/layer_animation.cc",
    "compositor/layer_animation.h",
    "compositor/layer_owner.cc",
    "compositor/layer_owner.h",
    "compositor/layer_owner_delegate.cc",
    "compositor/layer_owner_delegate.h",
    "compositor/root_layer.cc",
    "compositor/root_layer.h",
    "events/event.cc",
    "events/event.h",
    "events/event_dispatcher.cc",
    "events/event_dispatcher.h",
    "events/event_handler.cc",
    "events/event_handler.h",
    "events/event_target.cc",
    "events/event_target.h",
    "events/mouse_click_tracker.cc",
    "events/mouse_click_tracker.h",
    "events/native_event_win.cc",
    "events/native_event_win.h",
    "focus_controller.cc",
    "focus_controller.h",
    "root_widget.cc",
    "root_widget.h",
    "system_metrics.cc",
    "system_metrics.h",
    "system_metrics_observer.cc",
    "system_metrics_observer.h",
    "widget.cc",
    "widget.h",
  ]

  deps = [
    "//base",
    "//common",
    "//evita/gfx",
  ]
}
