# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ui") {
  sources = [
    "caret.cc",
    "caret.h",
    "caret_owner.cc",
    "caret_owner.h",
    "controls/arrow_button.cc",
    "controls/arrow_button.h",
    "controls/button.cc",
    "controls/button.h",
    "controls/button_control.cc",
    "controls/button_painter.cc",
    "controls/button_painter.h",
    "controls/checkbox_control.cc",
    "controls/checkbox_control.h",
    "controls/checkbox_painter.cc",
    "controls/checkbox_painter.h",
    "controls/control.cc",
    "controls/control_controller.cc",
    "controls/label_control.cc",
    "controls/label_control.h",
    "controls/label_painter.cc",
    "controls/label_painter.h",
    "controls/radio_button_control.cc",
    "controls/radio_button_control.h",
    "controls/radio_button_painter.cc",
    "controls/radio_button_painter.h",
    "controls/scroll_bar.cc",
    "controls/scroll_bar_observer.cc",
    "controls/status_bar.cc",
    "controls/table_control.cc",
    "controls/table_control_observer.cc",
    "controls/text_field_control.cc",
    "controls/text_field_control.h",
    "controls/text_field_painter.cc",
    "controls/text_field_painter.h",
    "tooltip.cc",
    "tooltip.h",
  ]

  deps = [
    ":widget",
  ]
}

source_set("base") {
  sources = [
    "base/ime/text_composition.cc",
    "base/ime/text_composition.h",
    "base/ime/text_input_client.cc",
    "base/ime/text_input_client.h",
    "base/ime/text_input_client_win.cc",
    "base/ime/text_input_client_win.h",
    "base/ime/text_input_delegate.cc",
    "base/ime/text_input_delegate.h",
    "base/selection_model.cc",
    "base/selection_model.h",
    "base/selection_state.h",
    "base/table_model.cc",
    "base/table_model_observer.cc",
    "system_metrics.cc",
    "system_metrics.h",
    "system_metrics_observer.cc",
    "system_metrics_observer.h",
  ]
  deps = [
    "//base",
  ]
}

source_set("widget") {
  sources = [
    "compositor/compositor.cc",
    "compositor/compositor.h",
    "compositor/layer.cc",
    "compositor/layer.h",
    "compositor/layer_animation.cc",
    "compositor/layer_animation.h",
    "compositor/layer_owner.cc",
    "compositor/layer_owner.h",
    "compositor/layer_owner_delegate.cc",
    "compositor/layer_owner_delegate.h",
    "compositor/root_layer.cc",
    "compositor/root_layer.h",
    "events/event.cc",
    "events/event.h",
    "events/event_dispatcher.cc",
    "events/event_dispatcher.h",
    "events/event_handler.cc",
    "events/event_handler.h",
    "events/event_target.cc",
    "events/event_target.h",
    "events/mouse_click_tracker.cc",
    "events/mouse_click_tracker.h",
    "events/native_event_win.cc",
    "events/native_event_win.h",
    "focus_controller.cc",
    "focus_controller.h",
    "root_widget.cc",
    "root_widget.h",
    "widget.cc",
    "widget.h",
  ]

  deps = [
    ":base",
    "//base",
    "//common",
    "//evita/gfx",
    "//evita/ui/animation",
  ]
}
