# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

static_library("v8_glue") {
  sources = [
    "array_buffer_view.cc",
    "constructor_template.cc",
    "converter.cc",
    "function_template_builder.cc",
    "isolate_holder.cc",
    "per_isolate_data.cc",
    "runner.cc",
    "runner_delegate.cc",
    "scriptable.cc",
    "v8_platform.cc",
    "v8_platform.h",
    "wrapper_info.cc",
  ]

  public_deps = [
    "//gin",
    "//v8",
  ]
}

test("evita_v8_glue_unittests") {
  sources = [
    "runner_unittest.cc",
  ]
  deps = [
    ":v8_glue",
    "//base/test:run_all_unittests",
    "//testing/gtest",
  ]
}
