# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("views") {
  sources = [
    "canvas_content_window.cc",
    "canvas_content_window.h",
    "content_observer.cc",
    "content_observer.h",
    "content_window.cc",
    "content_window.h",
    "frame_list.cc",
    "frame_observer.cc",
    "icon_cache.cc",
    "icon_cache.h",
    "message_view.cc",
    "message_view.h",
    "metrics_view.cc",
    "metrics_view.h",
    "switches.cc",
    "switches.h",
    "table_view_model.cc",
    "table_view_model.h",
    "table_window.cc",
    "table_window.h",
    "text_window.cc",
    "text_window.h",
    "view_delegate_impl.cc",
    "view_thread_proxy.cc",
    "view_thread_proxy.h",
    "window.cc",
    "window.h",
    "window_set.cc",
    "window_set.h",
  ]

  deps = [
    "//base",

    "//evita/layout",
    "//evita/metrics",
    "//evita/spellchecker",
    "//evita/ui",
    "//evita/views/events",
    "//evita/views/forms",
    "//evita/views/tabs",
  ]
}
