# Copyright (c) 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("visuals") {
  sources = [
    "geometry/affine_transformer.cc",
    "geometry/affine_transformer.h",
    "geometry/float_matrix3x2.cc",
    "geometry/float_matrix3x2.h",
    "geometry/float_point.cc",
    "geometry/float_point.h",
    "geometry/float_quad.cc",
    "geometry/float_quad.h",
    "geometry/float_rect.cc",
    "geometry/float_rect.h",
    "geometry/float_size.cc",
    "geometry/float_size.h",
    "layout/layouter.cc",
    "layout/layouter.h",
    "paint/paint_info.cc",
    "paint/paint_info.h",

    #"paint/paint_tracker.cc",
    #"paint/paint_tracker.h",
    "paint/painter.cc",
    "paint/painter.h",
  ]

  public_deps = [
    "//base",
    "//evita/visuals/display",
    "//evita/visuals/model",
  ]
}

executable("demo") {
  output_name = "evita_visuals_demo"
  sources = [
    "demo/demo_application.cc",
    "demo/demo_application.h",
    "demo/demo_main.cc",
    "demo/demo_model.cc",
    "demo/demo_model.h",
    "demo/demo_window.cc",
    "demo/demo_window.h",
  ]

  deps = [
    ":visuals",
    "//evita/ui:widget",
    "//evita/visuals/display:processor",
  ]

  if (is_win) {
    sources += [ "demo/demo_window_win.cc" ]
  }

  configs -= [ "//build/config/win:console" ]
  configs += [ "//build/config/win:windowed" ]
}

test("tests") {
  output_name = "evita_visuals_tests"

  sources = [
    "geometry/affine_transformer_test.cc",
    "geometry/float_matrix3x2_test.cc",
    "geometry/float_point_test.cc",
    "geometry/float_quad_test.cc",
    "geometry/float_rect_test.cc",
    "geometry/float_size_test.cc",
    "paint/painter_test.cc",
  ]

  deps = [
    ":visuals",
    "//base/test:run_all_unittests",
    "//evita/visuals/css:test_files",
    "//evita/visuals/display:test_files",
    "//evita/visuals/model:test_files",
  ]
}
