# Copyright (c) 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("visuals") {
  public_deps = [
    "//base",
    "//evita/visuals/display",
    "//evita/visuals/geometry",
    "//evita/visuals/layout",
    "//evita/visuals/model",
    "//evita/visuals/paint",
  ]
}

executable("demo") {
  output_name = "evita_visuals_demo"
  sources = [
    "demo/demo_application.cc",
    "demo/demo_application.h",
    "demo/demo_main.cc",
    "demo/demo_model.cc",
    "demo/demo_model.h",
    "demo/demo_window.cc",
    "demo/demo_window.h",
  ]

  deps = [
    ":visuals",
    "//evita/ui:widget",
    "//evita/visuals/display:processor",
  ]

  if (is_win) {
    sources += [ "demo/demo_window_win.cc" ]
  }

  configs -= [ "//build/config/win:console" ]
  configs += [ "//build/config/win:windowed" ]
}

test("tests") {
  output_name = "evita_visuals_tests"

  sources = [
  ]

  deps = [
    ":visuals",
    "//base/test:run_all_unittests",
    "//evita/visuals/css:test_files",
    "//evita/visuals/display:test_files",
    "//evita/visuals/geometry:test_files",
    "//evita/visuals/model:test_files",
    "//evita/visuals/paint:test_files",
  ]
}
