# Copyright (c) 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("visuals") {
  public_deps = [
    "//base",
    "//evita/visuals/display",
    "//evita/visuals/view",
  ]
}

test("tests") {
  output_name = "evita_visuals_tests"

  sources = []

  deps = [
    ":visuals",
    "//base/test:run_all_unittests",
    "//evita/visuals/css:test_files",
    "//evita/visuals/display:test_files",
    "//evita/visuals/dom:test_files",
    "//evita/visuals/fonts:test_files",
    "//evita/visuals/geometry:test_files",
    "//evita/visuals/layout:test_files",
    "//evita/visuals/paint:test_files",
    "//evita/visuals/style:test_files",
    "//evita/visuals/view/public:test_files",
  ]
}
